Fixed (hopefully) the issue where the project menu is hidden behind tab contents

--- a/src/coriander/haarlem/views/tabs/rss.tab.view.css
+++ b/src/coriander/haarlem/views/tabs/rss.tab.view.css
@@ -1,5 +1,5 @@
 div#coriander-haarlem-tab-content {
-    z-index:100;
+    z-index:1;
     height:100%;
     position:relative;
     margin-top:0px;
